Fix text overflow in header

--- a/assets/css/grid.css
+++ b/assets/css/grid.css
@@ -219,3 +219,9 @@ header .emoji .ltr {
         display: none;
   }
 }
+
+@media screen and (max-width: 350px) {
+  header .logo .emoji {
+        display: none;
+  }
+}
